force-app/main/default/objects/Project__c/fields/AI_Features_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Features_Used__c</fullName>
    <label>AI Features Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Personalization</fullName>
            </value>
            <value>
                <fullName>Forecasting</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Custom Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 